adequações padrão REST

--- a/src/app/components/campo-pesquisa/campo-pesquisa.component.html
+++ b/src/app/components/campo-pesquisa/campo-pesquisa.component.html
@@ -1,2 +1,2 @@
 <!-- <input type="text" [(ngModel)]="Pesquisa" (focusout)="solicitarPesquisa($any($event.target).value)"> -->
-<input type="text" (focusout)="solicitarPesquisa($any($event.target).value)">
+<input type="text" placeholder='{{placeholder}}' (focusout)="solicitarPesquisa($any($event.target).value)">
